--- a/dj_tasks/requirements.txt
+++ b/dj_tasks/requirements.txt
@@ -1,8 +1,11 @@
 Django==3.1.3
-oauth2client==4.1.3 
+djangorestframework==3.12.2
 
+oauth2client==4.1.3 
 gunicorn==19.9.0
+
 google-api-python-client==1.12.8
 google-cloud-tasks==1.1.0
 googleapis-common-protos==1.6.0
-google-cloud-datastore==1.7.3
+google-cloud-storage==1.35.0
+
